--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@
     height: 100%;
   }
   /* Optional: Makes the sample page fill the window. */
-  /* html, body {
+  html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-      } */
+      }
