--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+/* font-family: 'Anton', sans-serif;
+font-family: 'Signika', sans-serif;
+font-family: 'Damion', cursive; */
+
+/* Base Styling */
+
+body {
+    font-family: 'Signika', sans-serif;
+    font-weight: 300;
+}
+
+
 #map {
     height: 100%;
 }
@@ -23,3 +35,5 @@
 #signin-form {
   padding-left:40px;
 }
+
+
