--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,12 @@ body {
 
 
 #map {
-    height: 100%;
+    height: 400px;
+    width:400px;
+    margin: auto;
+    padding-top:20%;
+    /* float: right; */
+
 }
   /* Optional: Makes the sample page fill the window. */
   html, body {
