--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,11 @@ nav {
     width: 100%;
 }
 #footer {
-   position: sticky;
+   position: absolute;
    bottom: 0;
    width: 100%;
    background-color:#3f4c49;
+   margin-top: 50px;
 }
 .foot {
     text-align: center;
@@ -70,6 +71,7 @@ nav {
 #emailHelp {
     float:right;
     font-size:10px;
+}
   
 .bg-offwhite {
     background-color: #f8f7f1;
