--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ nav {
    bottom: 0;
    width: 100%;
    background-color:#3f4c49;
-   margin-top: 50px;
+   margin-top: 100px;
 }
 .foot {
     text-align: center;
@@ -104,4 +104,8 @@ nav {
 }
 #signintext {
     text-align: center;
+}
+
+#bodycontent {
+    margin-bottom: 200px;
 }
