created single results page added basic elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,10 @@ p {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url("./../images/topography-01.svg"), linear-gradient(#49beaa, #196266);
-    background-size: 30;
+    background-image: url("./../images/topography-01.svg");
+    background-color:#196266;
+    background-size: 33%;
+    /* background-image: url("./../images/topography-01.svg"), linear-gradient(to bottom, #49beaa 0%, #196266 100%); */
 }
 
 
@@ -108,4 +110,9 @@ nav {
 
 #bodycontent {
     margin-bottom: 200px;
+}
+
+.hikeimage {
+    width: 100%;
+    margin-top: 0;
 }
