switched to mvp background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,9 +41,9 @@ p {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-image: url("./../images/topography-01.svg");
-    background-color:#196266;
-    background-size: 33%;
+    background-image: url("./../images/topography_teal.svg");
+    /* background-color:#196266; */
+    background-size: 60%;
     /* background-image: url("./../images/topography-01.svg"), linear-gradient(to bottom, #49beaa 0%, #196266 100%); */
 }
 
